[project]
name = "water-flow-forces"
version = "0.1.0"
description = "A Streamlit-based calculator to estimate design forces on transmission tower footings in accordance with AS 5100.2 Section 16 - Forces Resulting from Water Flow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "streamlit>=1.44.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
