[project]
name = "water-flow-forces"
version = "0.1.0"
description = "A Streamlit-based calculator to estimate design forces on transmission tower footings in accordance with AS 5100.2 Section 16 - Forces Resulting from Water Flow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.44.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.0.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
water-flow-forces = "main:main"
